# MarioSuperGame

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  savegame.txt  savegame2.txt  savegame3.txt  savegame4.txt  savegame5.txt  savegame6.txt
assets/animation/: ContainCoin.txt  blaze.txt  bowser.txt  fireball.txt  fireball_explode.txt  fireflower.txt  goomba.txt  goomba_blue.txt  koopa.txt  koopa_blue.txt  koopa_red.txt  luigi.txt  mario.txt  parakoopa.txt  piranha.txt  star.txt
include/: Appearance.h  Button.h  Exceptions.h  Game.h  LevelMenu.h  MainMenu.h  Map.h  Map.hpp  MenuState.h  MyCamera2D.h  Observer.h  ResourceManager.h  SettingsMenu.h  SoundManager.h  StateManager.h  SubMenu.h  VolumeSlider.h  World11.h
include/Animation/: Animation.h  Appearance.h  LerpMover.h  TransitionScene.h
include/Blocks/: Block.h  Brick.h  Coin.h  Flag.h  Floor.h  Invisible.h  Lift.h  Question.h  Sewer.h
include/Character/: Animation.h  Blaze.h  Bowser.h  Character.h  CharacterState.h  Enemy.h  EnemyFactory.h  Fireball.h  GameObject.h  Global.h  Goomba.h  IPowerUpCreator.h  Koopa.h  MyCamera2D.h  ParaKoopa.h  Piranha.h  PlayerAction.h  PlayerMovement.h  PowerUp.h
include/Object/: Creator.h  Fireball.h  FireballManager.h  GameObject.h  PowerUp.h
include/Observer/: ICollidable.h  Observer.h
include/Resources/: Map.h  SoundManager.h  StateManager.h  StatsManager.h  Timer.h
include/States/: AboutMenu.h  EndResult.h  GameOverMenu.h  LevelMenu.h  MainMenu.h  SettingsMenu.h  SubMenu.h  World.h  (+1 more)
src/: Animation.cpp  Blaze.cpp  Bowser.cpp  Button.cpp  Character.cpp  CharacterState.cpp  CollisionManager.cpp  Enemy.cpp  Fireball.cpp  Game.cpp  Global.cpp  Goomba.cpp  Koopa.cpp  LevelMenu.cpp  MainMenu.cpp  Map.cpp  MyCamera2D.cpp  ParaKoopa.cpp  Piranha.cpp  PlayerMovement.cpp  PowerUp.cpp  ResourceManager.cpp  SettingsMenu.cpp  SoundManager.cpp  StateManager.cpp  SubMenu.cpp  VolumeSlider.cpp  World11.cpp  main.cpp
(+40 files in other folders)
